--- a/src/main/resources/templates/web/cart/editOrder.peb.html
+++ b/src/main/resources/templates/web/cart/editOrder.peb.html
@@ -1,3 +1,5 @@
+{% include "common/header" %}
+{% include "common/navbar" %}
 <div class="container col-12">
 
     <h2 class="product-title" style="text-align: center; margin-bottom: 20px;
@@ -7,7 +9,7 @@
 
     <form action="/admin/orders/update/{{order.id}}" method="POST">
         <input type="hidden" name="id" value="{{ cart.id }}">
-        <input type="hidden" name="{{ _csrf.parameterName }}" value="{{ _csrf.token }}" />
+        <input type="hidden" name="{{ _csrf.parameterName }}" value="{{ _csrf.token }}"/>
 
         <div class="product-main-grid">
 
@@ -92,3 +94,4 @@
 
     </form>
 </div>
+{% include "common/footer" %}
