--- a/src/main/resources/templates/web/auth/auth.peb.html
+++ b/src/main/resources/templates/web/auth/auth.peb.html
@@ -2,7 +2,6 @@
 {% set isLogin = currentPath equals '/auth/singin' %}
 {% set isRegister = currentPath equals '/auth/signup' %}
 {% set isChangePass = currentPath equals '/auth/me/changepassword' %}
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,16 +9,16 @@
         {% if isLogin %}Iniciar Sesión
         {% elseif isRegister %}Registrarse
         {% elseif isChangePass %}Cambiar Contraseña
-        {% else %}Autenticación{% endif %} 
+        {% else %}Autenticación{% endif %}
         - Dawazon
     </title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    
+
     <meta content="{{ csrfToken }}" name="_csrf"/>
     <meta content="{{ csrfParamName }}" name="_csrf_param"/>
     <meta content="{{ csrfHeaderName }}" name="_csrf_header"/>
-    
+
     <link href="/Dawazon.ico" rel="icon" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +42,7 @@
     <div class="auth-container">
 
         <div class="auth-card">
-            <form action="{% if isLogin %}/auth/signin/{% elseif isRegister %} /auth/signup {% else %} /auth/me/changepassword" method="POST">
+            <form action="{% if isLogin %}/auth/signin-post/{% elseif isRegister %} /auth/signup {% else %} /auth/me/changepassword" method="POST">
                 <input type="hidden" name="{{ csrfParamName }}" value="{{ csrfToken }}"/>
 
                 {% if isLogin or isRegister %}
