Implementado el controller de productos

--- a/src/main/resources/templates/blocked.peb.html
+++ b/src/main/resources/templates/blocked.peb.html
@@ -53,7 +53,7 @@
 
         <!-- Mensaje -->
         <p class="error-message">
-            {{error. mensage}}
+            {{error.message}}
         </p>
 
         <!-- Botones de acción -->
