--- a/src/main/resources/templates/web/cart/myOrders.peb.html
+++ b/src/main/resources/templates/web/cart/myOrders.peb.html
@@ -14,7 +14,7 @@
                 <p class="text-muted">
                     Explora nuestro catálogo para encontrar lo que buscas.
                 </p>
-                <a href="/static" class="btn btn-gradient mt-3 px-4 shadow-sm"
+                <a href="/" class="btn btn-gradient mt-3 px-4 shadow-sm"
                 >Seguir comprando</a
                 >
             </div>
