--- a/src/main/resources/templates/common/navbar.peb.html
+++ b/src/main/resources/templates/common/navbar.peb.html
@@ -24,11 +24,11 @@
 
                 {% if isAuthenticated %}
                 <div class="d-flex align-items-center gap-3 ms-1">
-                    {{% if isUser %}}
+                    {% if isUser %}
                     <a href="#" class="text-white position-relative d-none d-md-block">
                         <i class="bi bi-cart3 fs-4"></i>
                     </a>
-                    {{% endif %}}
+                    {% endif %}
                     <!-- Dropdown de Usuario -->
                     <div class="dropdown">
                         <a href="#" class="d-flex align-items-center text-white text-decoration-none"
