--- a/src/main/resources/templates/web/productos/lista.peb.html
+++ b/src/main/resources/templates/web/productos/lista.peb.html
@@ -9,12 +9,13 @@
         <button class="col-3 btn btn-gradient" onclick="save(this)">
             añadir produto
         </button>
+        {% endif %}
     </div>
     <div id="grid-productos" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-        {% if productos is empty %}
+        {% if productos.content is empty %}
         <div class="alert alert-warning">No se encontraron productos.</div>
         {% endif %}
-        {% for product in productos %}
+        {% for product in productos.content %}
         <div class="col">
             <div class="card h-100 p-3 bg-white">
                 <div class="img-container">
