--- a/src/main/resources/templates/common/navbar.peb.html
+++ b/src/main/resources/templates/common/navbar.peb.html
@@ -15,7 +15,7 @@
                 <form class="d-flex flex-grow-1" action="/" method="get" role="search">
                     <div class="input-group">
                         <input class="form-control search-input" name="name" type="search" placeholder="Buscar..."
-                            aria-label="Search" value="{{name | default('')}}">
+                            aria-label="Search" value="{{username | default('')}}">
                         <button class="btn btn-search" type="submit">
                             <i class="bi bi-search"></i>
                         </button>
@@ -25,7 +25,7 @@
                 {% if isAuthenticated %}
                 <div class="d-flex align-items-center gap-3 ms-1">
                     {% if isUser %}
-                    <a href="#" class="text-white position-relative d-none d-md-block">
+                    <a href="/auth/me/cart" class="text-white position-relative d-none d-md-block">
                         <i class="bi bi-cart3 fs-4"></i>
                     </a>
                     {% endif %}
@@ -36,11 +36,11 @@
                             <img src="img/defaultImg.png" alt="user" class="rounded-circle profile-img">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end shadow">
-                            <li><a class="dropdown-item" href="#">Mi Cuenta</a></li>
+                            <li><a class="dropdown-item" href="/auth/me">Mi Cuenta</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+                            <li><a class="dropdown-item" href="/auth/logout">Cerrar Sesión</a></li>
                         </ul>
                     </div>
                 </div>
