Algun bug arreglado

--- a/src/main/resources/templates/common/navbar.peb.html
+++ b/src/main/resources/templates/common/navbar.peb.html
@@ -49,7 +49,7 @@
                 <div class="d-flex align-items-center gap-3 ms-1">
 
                     <div class="dropdown">
-                        <a href="/auth/singin" class="d-flex align-items-center text-white text-decoration-none"
+                        <a href="/auth/signin" class="d-flex align-items-center text-white text-decoration-none"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <img src="defaultImg.png" alt="user" class="rounded-circle profile-img">
                         </a>
